src/test/ui/generic-associated-types/issue-87258_a.stderr
error: could not find defining uses
  --> $DIR/issue-87258_a.rs:18:26
   |
LL |     type FooFuture<'a> = impl Trait1;
   |                          ^^^^^^^^^^^

error: aborting due to previous error

